--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: Symfony CI
 
-on: [push]
+on: [ push ]
 
 jobs:
   ci:
@@ -32,4 +32,16 @@ jobs:
 
       - name: Audit de sécurité
         run: composer audit --format=json --no-interaction
-        continue-on-error: true # Permettre au CI de continuer même si des vulnérabilités sont détectées
+        continue-on-error: true
+
+      - name: Dump environment variables for production
+        run: composer dump-env prod
+        env:
+          APP_ENV: prod
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: symfony-artifact
+          path: symfony-artifact-r1.tar.gz
